@@ -35,10 +35,12 @@ PM_TESTING_PROFILE = PloneWithPackageLayer(
     name="PM_TESTING_PROFILE")
 
 PM_TESTING_PROFILE_INTEGRATION = IntegrationTesting(
-    bases=(PM_TESTING_PROFILE,), name="PM_TESTING_PROFILE_INTEGRATION")
+    bases=(PM_TESTING_PROFILE,),
+    name="PM_TESTING_PROFILE_INTEGRATION")
 
 PM_TESTING_PROFILE_FUNCTIONAL = FunctionalTesting(
-    bases=(PM_TESTING_PROFILE,), name="PM_TESTING_PROFILE_FUNCTIONAL")
+    bases=(PM_TESTING_PROFILE,),
+    name="PM_TESTING_PROFILE_FUNCTIONAL")
 
 PM_TESTING_ROBOT = FunctionalTesting(
     bases=(
